--- a/index.html
+++ b/index.html
@@ -94,10 +94,14 @@
 				</div>
 			</div>
 		</div>
-<br /><br />
-<p style="text-align:center"><small>Contador de visitas</small> <a href="https://www.hitwebcounter.com" target="_blank">
-<img src="https://hitwebcounter.com/counter/counter.php?page=7666647&style=0007&nbdigits=7&type=page&initCount=0" title="Total Website Hits" Alt="Web Hits"   border="0" /></a></p>
-<br /><br /><br />
+		<br /><br />
+		<p style="text-align:center">
+		<span style="font-size:160%;font-weight:bold">Apoiadores!</span><br /><br />
+		As contribuições são de grande importancia para manter o nosso servidor de pé<br />
+		cada VIP comprado ajuda a pagar os custos de host do servidor<br />
+		conheça os apoiadores que fizeram a diferença para o servidor crescer <a href="apoiadores.html">clicando aqui</a>!<br />
+		<img src="https://i.pinimg.com/originals/ac/f2/03/acf2035028cddaaeabc94d67e1bda8a2.png" width="250px" height="343px"/>	
+		</p><br /><br />
 <p style="text-align:center"><b>Redes Sociais: </b> 
 	<a href="https://facebook.com/MegaCraftServidor/" target="_blank"><img src="img/facebook.png" hidth="35px" height="35px" alt="Facebook MegaCraft"></a>
 	<a href="https://instagram.com/MegaCraftBR" target="_blank"><img src="img/instagram.png" hidth="35px" height="35px" alt="Instagram MegaCraft"></a>
@@ -109,11 +113,11 @@
 		<cite><span style="font-size:150%;font-weight:bold">Regras do servidor!</span><br /><br />
 		Por favor, é muito importante que você leia atentamente as regras do servidor<br />para para evitar qualquer tipo de banimento ou problemas futuros! <a href="regras.html" >Clique aqui</a>.</p>		
 		</cite>
-		<br /><br /><br /><br />
-		<p style="text-align:center">
-		<span style="font-size:150%;font-weight:bold">Apoiadores!</span><br /><br />
-		<img style="float: right; margin: 0px 0px 15px 15px;" src="https://i.pinimg.com/originals/ac/f2/03/acf2035028cddaaeabc94d67e1bda8a2.png" width="250px" height="343px"/>As contribuições são de grande importancia para manter o nosso servidor de pé<br /> cada VIP comprado ajuda a pagar os custos de host do servidor<br /> conheça os apoiadores que fizeram a diferença para o servidor crescer <a href="apoiadores.html">clicando aqui</a>!<br style="clear:both" />
-		</p><br /><br />	
+		<br /><br />
+		<br /><br />
+		<p style="text-align:center"><small>Contador de visitas</small> <a href="https://www.hitwebcounter.com" target="_blank">
+		<img src="https://hitwebcounter.com/counter/counter.php?page=7666647&style=0007&nbdigits=7&type=page&initCount=0" title="Total Website Hits" Alt="Web Hits"   border="0" /></a></p>
+		<br /><br /><br />
 		<footer>
 			<p>Copyright &copy; 2020 MegaCraft</p>
 			<!-- Remove this part below if you want! -->
