--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 		<span style="font-size:200%;font-weight:bold">Apoiadores!</span><br /><br />
 		As contribuições são de grande importancia para manter o nosso servidor de pé<br />
 		cada VIP comprado ajuda a pagar os custos de host do servidor<br />
-		conheça os apoiadores que fizeram a diferença para o servidor crescer <a href="apoiadores.html">clicando aqui</a><br />
-		<i><b><strong>Seja um apoiador também<strong><br />e nos ajude a manter o servidor de pé <a href="https://loja.megacraft.com.br">clicando aqui</a>!</i></b><br />	
+		conheça os apoiadores que fizeram a diferença para o servidor crescer <a href="apoiadores.html">clicando aqui</a><br /><br />
+		<i><b><span style="font-size:150%">Seja um apoiador também<span><br />e nos ajude a manter o servidor de pé <a href="https://loja.megacraft.com.br">clicando aqui</a>!</i></b><br />	
 		<img src="https://i.pinimg.com/originals/ac/f2/03/acf2035028cddaaeabc94d67e1bda8a2.png" width="250px" height="343px"/>	
 		</p><br /><br />
 <p style="text-align:center"><b>Redes Sociais: </b> 
@@ -118,7 +118,6 @@
 		<br />
 		<p style="text-align:center"><small>Contador de visitas</small> <a href="https://www.hitwebcounter.com" target="_blank">
 		<img src="https://hitwebcounter.com/counter/counter.php?page=7666647&style=0007&nbdigits=7&type=page&initCount=0" title="Total Website Hits" Alt="Web Hits"   border="0" /></a></p>
-		<br />
 		<footer>
 			<p>Copyright &copy; 2020 MegaCraft</p>
 			<!-- Remove this part below if you want! -->
