--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
 		Por favor, é muito importante que você leia atentamente as regras do servidor<br />para para evitar qualquer tipo de banimento ou problemas futuros! <a href="regras.html" >Clique aqui</a>.</p>		
 		</cite>
 		<br /><br />
-		<br />
+		<br /><br />
 		<p style="text-align:center"><small>Contador de visitas</small> <a href="https://www.hitwebcounter.com" target="_blank">
 		<img src="https://hitwebcounter.com/counter/counter.php?page=7666647&style=0007&nbdigits=7&type=page&initCount=0" title="Total Website Hits" Alt="Web Hits"   border="0" /></a></p>
 		<br /><br /><p style="text-align:center">
-		<quote><small><b>NOTÍCIA IMPORTANTE</b><br />
+		<quote><small><b>IMPORTANTE</b><br />
 		O servidor MegaCraft não é de forma alguma afiliado à Mojang, AB. Nem deve ser considerada uma empresa endossada pela Mojang, AB.<br />
 		Quaisquer contribuições ou compras feitas nesta loja vão para a Equipe de Desenvolvimento MegaCraft.<br />
 		Para mais informações, suporte ou histórico de compras, envie-nos um tíquete em http://suporte.my-board.org/<br />
