--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 		<br /><br /><p style="text-align:center">
 		<quote><small><b>IMPORTANTE</b><br />
 		O servidor MegaCraft não é de forma alguma afiliado à Mojang, AB. Nem deve ser considerada uma empresa endossada pela Mojang, AB.<br />
-		Quaisquer contribuições ou compras feitas nesta loja vão para a Equipe de Desenvolvimento MegaCraft.<br />
+		Quaisquer contribuições ou compras feitas do servidor vão para a Equipe de Desenvolvimento MegaCraft.<br />
 		Para mais informações, suporte ou histórico de compras, envie-nos um tíquete em http://suporte.my-board.org/<br />
 		Minecraft ® / TM & © 2009-2020 Mojang / Notch<br /></small></quote>
 		<footer>
