--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 		<span style="font-size:200%;font-weight:bold">Apoiadores!</span><br /><br />
 		As contribuições são de grande importancia para manter o nosso servidor de pé<br />
 		cada VIP comprado ajuda a pagar os custos de host do servidor<br />
-		conheça os apoiadores que fizeram a diferença para o servidor crescer <a href="apoiadores.html" style="color: #1E90ff">clicando aqui</a><br /><br />
-		<i><b><span style="font-size:120%">Seja um apoiador também</span><br />e nos ajude a manter o servidor de pé <a href="https://loja.megacraft.com.br" style="color: #1E90ff">clicando aqui</a>!</i></b><br />	
+		conheça os apoiadores que fizeram a diferença para o servidor crescer <a href="apoiadores.html" style="color: #4169E1">clicando aqui</a><br /><br />
+		<i><b><span style="font-size:120%">Seja um apoiador também</span><br />e nos ajude a manter o servidor de pé <a href="https://loja.megacraft.com.br" style="color: #4169E1">clicando aqui</a>!</i></b><br />	
 		<img src="https://i.pinimg.com/originals/ac/f2/03/acf2035028cddaaeabc94d67e1bda8a2.png" width="250px" height="343px"/>	
 		</p><br /><br />
 <p style="text-align:center"><b>Redes Sociais: </b> 
@@ -112,7 +112,7 @@
 		<br /><br /><br /><br /><br />
 		<p style="text-align:center">
 		<cite><span style="font-size:150%;font-weight:bold">Regras do servidor!</span><br /><br />
-		Por favor, é muito importante que você leia atentamente as regras do servidor<br />para para evitar qualquer tipo de banimento ou problemas futuros! <a href="regras.html" style="color: #1E90ff">Clique aqui</a>.</p>		
+		Por favor, é muito importante que você leia atentamente as regras do servidor<br />para para evitar qualquer tipo de banimento ou problemas futuros! <a href="regras.html" style="color: #4169E1">Clique aqui</a>.</p>		
 		</cite>
 		<br /><br />
 		<br /><br />
@@ -123,7 +123,7 @@
 		<quote><small><b>IMPORTANTE</b><br />
 		O servidor MegaCraft não é de forma alguma afiliado à Mojang, AB. Nem deve ser considerada uma empresa endossada pela Mojang, AB.<br />
 		Quaisquer contribuições ou compras feitas do servidor vão para a Equipe de Desenvolvimento MegaCraft.<br />
-		Para mais informações, suporte ou histórico de compras, envie-nos um tíquete em <a href="http://suporte.my-board.org" style="color: #1E90ff" target="_blank">http://suporte.my-board.org</a><br />
+		Para mais informações, suporte ou histórico de compras, envie-nos um tíquete em <a href="http://suporte.my-board.org" style="color: #4169E1" target="_blank">http://suporte.my-board.org</a>.<br />
 		Minecraft ® / TM & © 2009-2020 Mojang / Notch<br /></small></quote>
 		<footer>
 			<p>Copyright &copy; 2020 MegaCraft</p>
