--- a/equipe.html
+++ b/equipe.html
@@ -84,19 +84,19 @@
 
 					<div>
 						<h3>PORKALYPSE</h3>
-						<div class="admin">Helper</div>
+						<div class="manager">Moderador</div>
 						<img src="img/pork.png" width="200px" height="400px">
 					</div>
 
 					<div>
-						<h3>Em análise</h3>
-						<div class="admin">Builder</div>
+						<h3>Ghost1611</h3>
+						<div class="admin">Ajudante</div>
 						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
 					</div>
 
 					<div>
-						<h3>Em análise</h3>
-						<div class="admin">Anunciante</div>
+						<h3>Foulg</h3>
+						<div class="admin">Ajudante</div>
 						<img src="https://render.namemc.com/skin/3d/body.png?skin=6444d67ab52b1882&model=classic&width=200&height=400">
 					</div>
 				</div>
